[project]
name = "mcplanggraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-groq>=0.3.6",
    "langchain-mcp-adapters>=0.1.9",
    "langgraph>=0.5.4",
    "mcp>=1.12.2",
]

[tool.uv.workspace]
members = [
    "venv",
]
